week 3 team acitivity
