# routes/contactsRoute.js
@@ -1,26 +1,148 @@
-// routes/contactRoute.js
 const express = require('express');
 const router = express.Router();
 const contactsControllers = require('../controllers/contactsControllers');
-const contact = require('../models/contact-model');
-
-//swagger documentation
+const validateContact = require('../middleware/validate');
 
 /**
  * @swagger
- * /:
- *   get:
- *     description: Get all contacts
+ * tags:
+ *   name: Contacts
+ *   description: API for managing contacts
  */
-// GET all contacts
+
+/**
+ * @swagger
+ * components:
+ *   schemas:
+ *     Contact:
+ *       type: object
+ *       required:
+ *         - firstName
+ *         - lastName
+ *         - email
+ *       properties:
+ *         firstName:
+ *           type: string
+ *         lastName:
+ *           type: string
+ *         email:
+ *           type: string
+ *         favoriteColor:
+ *           type: string
+ *         birthday:
+ *           type: string
+ *           format: date
+ */
+
+/**
+ * @swagger
+ * /contacts:
+ *   get:
+ *     summary: Get all contacts
+ *     tags: [Contacts]
+ *     responses:
+ *       200:
+ *         description: List of all contacts
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 $ref: '#/components/schemas/Contact'
+ */
 router.get('/', contactsControllers.getAll);
-//Get single contact by ID
-router.get('/:id', contactsControllers.getSingle); 
-// Create a new contact
-router.post('/', contactsControllers.createContact);
-// Update a contact
-router.put('/:id', contactsControllers.updateContact);  
-// Delete a contact
+
+/**
+ * @swagger
+ * /contacts/{id}:
+ *   get:
+ *     summary: Get a single contact by ID
+ *     tags: [Contacts]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *         description: Contact ID
+ *     responses:
+ *       200:
+ *         description: A single contact
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '#/components/schemas/Contact'
+ *       404:
+ *         description: Contact not found
+ */
+router.get('/:id', contactsControllers.getSingle);
+
+/**
+ * @swagger
+ * /contacts:
+ *   post:
+ *     summary: Create a new contact
+ *     tags: [Contacts]
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: '#/components/schemas/Contact'
+ *     responses:
+ *       201:
+ *         description: Contact created
+ *       400:
+ *         description: Validation error
+ */
+router.post('/', validateContact, contactsControllers.createContact);
+
+/**
+ * @swagger
+ * /contacts/{id}:
+ *   put:
+ *     summary: Update a contact
+ *     tags: [Contacts]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *         description: Contact ID
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: '#/components/schemas/Contact'
+ *     responses:
+ *       200:
+ *         description: Contact updated
+ *       404:
+ *         description: Contact not found
+ */
+router.put('/:id', validateContact, contactsControllers.updateContact);
+
+/**
+ * @swagger
+ * /contacts/{id}:
+ *   delete:
+ *     summary: Delete a contact
+ *     tags: [Contacts]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *         description: Contact ID
+ *     responses:
+ *       200:
+ *         description: Contact deleted
+ *       404:
+ *         description: Contact not found
+ */
 router.delete('/:id', contactsControllers.deleteContact);
 
 module.exports = router;
